# streamlit-sheets-dashboard

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  install.sh  pyproject.toml  run.sh  test.sh
scripts/: migrate_to_gsheets.py  run_canonical_migration.sh
src/planning/: __init__.py  config.py  google_workspace.py  metadata_store.py  models.py  oauth.py  sync_service.py  ui.py  xlsm_parser.py
src/streamlit_sheets_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_migrate_to_gsheets.py  test_sync_service.py  test_xlsm_parser.py
